# networking-ovn-bgp

./: requirements.txt  setup.cfg  setup.py
networking_ovn_bgp/: opts.py
networking_ovn_bgp/common/: config.py
networking_ovn_bgp/l3/: bgp_router.py
networking_ovn_bgp/ml2/: mech_driver.py
