[metadata]
name = networking-ovn-bgp
summary = OVN-BGP ML2 driver
author = CloudFerro

[files]
packages =
  networking_ovn_bgp

[entry_points]
neutron.ml2.mechanism_drivers =
  ovn_bgp = networking_ovn_bgp.ml2.mech_driver:OVNBGPMechanismDriver
neutron.service_plugins =
  ovn-bgp = networking_ovn_bgp.l3.bgp_router:OVNBGPL3RouterPlugin